--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Hangman</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
     <h1>Simple 'Hangman' Game</h1>
@@ -13,12 +13,12 @@
 
     <div class="win">
       <h2>You won!</h2>
-      <img src="win.gif" />
+      <img src="images/win.gif" />
     </div>
 
     <div class="lose">
       <h2>You lost..</h2>
-      <img src="lose.gif" />
+      <img src="images/lose.gif" />
       <p>The chosen word was: <span></span></p>
     </div>
 
@@ -30,6 +30,6 @@
     <h3>Incorrectly guessed letters:</h3>
     <div class="guessed_letters"></div>
     <p class="lives">You have <span></span> lives remaining</p>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
