--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     <h3>Incorrectly guessed letters:</h3>
     <div class="guessed_letters"></div>
     <p class="lives">You have <span></span> lives remaining</p>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="/test/script.js"></script>
   </body>
 </html>
