--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
-    <h1>Simple 'Hangman' Game</h1>
-    <p>[no people will actually be harmed during this game]</p>
+  <div class="container"> 
+    <div class="gameName">     
+        <h1>Simple 'Hangman' Game</h1>
+        <p>[no people will actually be harmed during this game]</p>
+    </div>
 
     <div class="win">
       <h2>You won!</h2>
@@ -22,14 +25,19 @@
       <p>The chosen word was: <span></span></p>
     </div>
 
-    <input type="text" placeholder="Guess a letter" maxlength="1" />
-    <button class="guess">Guess</button>
-    <button class="restart">Restart</button>
+    <div class="input">
+        <input type="text" placeholder="Guess a letter" maxlength="1" />
+    </div>
+    <div class="buttons">
+        <button class="guess">Guess</button>
+        <button class="restart">Restart</button>
+    </div>
     <h2>Current word:</h2>
     <div class="the_word">_ _ _ _ _</div>
     <h3>Incorrectly guessed letters:</h3>
     <div class="guessed_letters"></div>
     <p class="lives">You have <span></span> lives remaining</p>
-    <script type="text/javascript" src="/test/script.js"></script>
+  </div>
+    <script type="text/javascript" src="test/script.js"></script>
   </body>
 </html>
