--- a/index.html
+++ b/index.html
@@ -8,36 +8,36 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
-  <div class="container"> 
-    <div class="gameName">     
+    <div class="container">
+      <div class="gameName">
         <h1>Simple 'Hangman' Game</h1>
         <p>[no people will actually be harmed during this game]</p>
-    </div>
+      </div>
 
-    <div class="win">
-      <h2>You won!</h2>
-      <img src="images/win.gif" />
-    </div>
+      <div class="win">
+        <h2 class="win-animation">You won!</h2>
+        <img class="win-image" src="images/win.gif" />
+      </div>
 
-    <div class="lose">
-      <h2>You lost..</h2>
-      <img src="images/lose.gif" />
-      <p>The chosen word was: <span></span></p>
-    </div>
+      <div class="lose">
+        <h2>You lost..</h2>
+        <img src="images/lose.gif" />
+        <p>The chosen word was: <span></span></p>
+      </div>
 
-    <div class="input">
+      <div class="input">
         <input type="text" placeholder="Guess a letter" maxlength="1" />
-    </div>
-    <div class="buttons">
+      </div>
+      <div class="buttons">
         <button class="guess">Guess</button>
         <button class="restart">Restart</button>
+      </div>
+      <h2>Current word:</h2>
+      <div class="the_word">_ _ _ _ _</div>
+      <h3>Incorrectly guessed letters:</h3>
+      <div class="guessed_letters"></div>
+      <p class="lives">You have <span></span> lives remaining</p>
     </div>
-    <h2>Current word:</h2>
-    <div class="the_word">_ _ _ _ _</div>
-    <h3>Incorrectly guessed letters:</h3>
-    <div class="guessed_letters"></div>
-    <p class="lives">You have <span></span> lives remaining</p>
-  </div>
     <script type="text/javascript" src="test/script.js"></script>
   </body>
 </html>
