CSS win en lose animation toegevoegd

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div class="lose">
         <h2>You lost..</h2>
-        <img src="images/lose.gif" />
+        <img class="lose-image" src="images/lose.gif" />
         <p>The chosen word was: <span></span></p>
       </div>
 
