--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <div class="win">
         <h2 class="win-animation">You won!</h2>
-        <img class="win-image" src="images/win.gif" />
+        <img class="win-image" src="images/win2.gif" />
       </div>
 
       <div class="lose">
