--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <p class="lives">You have <span></span> lives remaining</p>
     </div>
     <script type="text/javascript" src="test/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/mathusummut/confetti.js/confetti.min.js"></script>
   </body>
-  
+
 </html>
